--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,7 @@
 	<artifactId>parent-pom</artifactId>
 	<packaging>pom</packaging>
 	<name>parent-pom</name>
-	<version>1.0</version>
-	<distributionManagement>
-		<site>
-			<id>olga</id>
-			<url>scp://elendir.dyndns.org:443/var/www/docs/parent-pom/</url>
-		</site>
-	   <repository>
-	       <id>artifactory</id>
-	       <name>olga-releases</name>
-	       <url>http://elendir.dyndns.org:80/artifactory/libs-releases-local</url>
-	   </repository>		
-	</distributionManagement>	
+	<version>1.0</version>	
 	<build>
 		<plugins>
 			<plugin>
@@ -85,11 +74,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<!-- 
-				<configuration>
-					<configLocation>/checkstyle/clarin_checks.xml</configLocation>
-				</configuration>
-				-->
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -133,11 +117,11 @@
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.2</version>
 			</plugin>
-			<!-- Javancss 
+			<!-- Javancss  -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>javancss-maven-plugin</artifactId>
-			</plugin>-->
+			</plugin>
 			<!-- JDepend . -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
